developerProject/force-app/main/default/objects/Contact/fields/Account11__c.field-meta.xml
<CustomField>
    <fullName>Account11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account11</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>