developerProject/force-app/main/default/objects/Contact/fields/OJSERLIB__Company_Director__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Company_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Director</label>
    <type>Checkbox</type>
</CustomField>