developerProject/force-app/main/default/objects/Contact/fields/OJSERLIB__Drivers_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Drivers_Licence_Number__c</fullName>
    <label>Drivers Licence Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>