developerProject/force-app/main/default/objects/Contact/fields/OJSERLIB__OtherGivenName__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__OtherGivenName__c</fullName>
    <label>Other Given Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>